test/analysis/reject/duplicate-field-variant.ptk
# expected: E1307

node bad = variant
    x: `bool`,
    y: `bool`,
    x: `bool`
;